Stackless-Python News
+++++++++++++++++++++

This file documents user visible changes to the Stackless extension of C-Python.
For other changes see Misc/NEWS.

What's New in Stackless 3.X.X?
==============================

*Release date: 20XX-XX-XX*

- https://github.com/stackless-dev/stackless/issues/199
  Enable stackless calls of coroutines wrapped in "asyncio._CTask", if
  soft-switching is enabled. Now asyncio runs coroutines stackless.

- https://github.com/stackless-dev/stackless/issues/197
  Enable stackless calls of method "contextvars.Context.run", if soft-switching
  is enabled.

- https://github.com/stackless-dev/stackless/issues/188
  Enable stackless calls of sub-iterators and coroutines (technically: the
  YIELD_FROM opcode) and of the following methods, if soft-switching is
  enabled:
    - generator.send() (generator.__next__() was already stackless);
    - coroutine.send();
    - coroutine_wrapper.__next__() and coroutine_wrapper.send();
    - async_generator_asend.__next__() and async_generator_asend.send().
  With this change it is possible to soft switch into/from the compound
  statements "async for" and "async with".

- https://github.com/stackless-dev/stackless/issues/200
  Fix a bug in the C-API functions PyTasklet_Run_nr() and
  PyTasklet_Switch_nr(). Under exotic conditions the functions could
  cause undefined behavior.

- https://github.com/stackless-dev/stackless/issues/196
  Stackless can now pickle coroutine_wrapper objects.

- https://github.com/stackless-dev/stackless/issues/190
  Silently ignore attempts to close a running generator, coroutine or
  asynchronous generator. This avoids spurious error messages, if such an
  object is deallocated as part of a paused, restorable tasklet.

- https://github.com/stackless-dev/stackless/issues/193
  Fix the macros PyTasklet_CheckExact(op) and PyChannel_CheckExact(op).
  Previously they contained a reference to a non existing variable.
