@@ -727,8 +727,6 @@ int slp_return_wrapper_hard(PyObject *retval);
 int slp_int_wrapper(PyObject *retval);
 int slp_current_wrapper(int(*func)(PyTaskletObject*),
                         PyTaskletObject *task);
-int slp_resurrect_and_kill(PyObject *self,
-                           void(*killer)(PyObject *));
 
 /* stackless pickling support */
 PyObject * slp_coro_wrapper_reduce(PyObject *o, PyTypeObject * wrapper_type);
