@@ -9,6 +9,12 @@ What's New in Stackless 3.X.X?
 
 *Release date: 20XX-XX-XX*
 
+- https://github.com/stackless-dev/stackless/issues/192
+  Use the PEP 442 mechanic to finalize a tasklet instead of a arcane logic in
+  tp_dealloc. The new code calls the finalizer only once. The finalizer tries
+  to kill the tasklet, as long as it has an unfinished C-state. This change
+  brings the behavior more in line with generators.
+
 - https://github.com/stackless-dev/stackless/issues/199
   Enable stackless calls of coroutines wrapped in "asyncio._CTask", if
   soft-switching is enabled. Now asyncio runs coroutines stackless.
